app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-api-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: nestjs-api
