app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nestjs
  labels:
    app: nestjs-api
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.myapi.dev.br
      secretName: letsencrypt-prod-private-key
  rules:
    - host: www.myapi.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nestjs-api-service
                port:
                  number: 3000
